Table users {
  id integer [pk]
  email text [not null, unique]
  name text [not null]
  status text [not null]
  password_hash text
  created_at text [not null, default: `now()`]
  updated_at text [not null, default: `now()`]
  deleted_at text
  sync_status text [not null, default: 'pending']
  server_version integer [not null, default: 0]
}

Table boards {
  id integer [pk]
  user_id integer [not null]
  title text [not null]
  description text
  created_at text [not null, default: `now()`]
  updated_at text [not null, default: `now()`]
  deleted_at text
  sync_status text [not null, default: 'pending']
  server_version integer [not null, default: 0]
}

Table statuses {
  id integer [pk]
  board_id integer [not null]
  name text(50) [not null]
  position integer [not null, default: 0]
  created_at text [not null, default: `now()`]
  updated_at text [not null, default: `now()`]
  deleted_at text
  sync_status text [not null, default: 'pending']
  server_version integer [not null, default: 0]

  indexes {
    (board_id, name) [unique]
  }
}

Table tasks {
  id integer [pk]
  board_id integer [not null]
  title text [not null]
  description text
  status_id integer [not null]
  priority_color text(50) [not null]
  deadline text
  is_completed integer [not null, default: 0]
  created_at text [not null, default: `now()`]
  updated_at text [not null, default: `now()`]
  deleted_at text
  sync_status text [not null, default: 'pending']
  server_version integer [not null, default: 0]
}

Table pomodoro_sessions {
  id integer [pk]
  user_id integer [not null]
  goal_minutes integer
  work_duration_seconds integer [not null]
  break_duration_seconds integer [not null]
  completed_cycles integer [not null, default: 0]
  started_at text [not null, default: `now()`]
  completed_at text
  created_at text [not null, default: `now()`]
  updated_at text [not null, default: `now()`]
  deleted_at text
  sync_status text [not null, default: 'pending']
  server_version integer [not null, default: 0]
}

Ref: statuses.board_id > boards.id [delete: cascade]
Ref: tasks.board_id > boards.id [delete: cascade]
Ref: tasks.status_id > statuses.id [delete: cascade]
